--- a/src/components/App.css
+++ b/src/components/App.css
@@ -3180,6 +3180,8 @@ body > .ol-li-lang:last-child li::before { content:'(--)';}
 
 .facetWidget.century .checkbox + span { text-transform: none;}
 
+.facetCollapse .widget:first-child { margin-top:0;  }
+
 span.subcollapse { opacity:0; transition:opacity 50ms ease-in-out ;  }
 span.subcollapse svg { vertical-align:-6px; cursor:pointer; font-size:18px; }
 .collapse.open > div > div > .widget > span.subcollapse, 
