--- a/src/components/App.css
+++ b/src/components/App.css
@@ -746,7 +746,7 @@ a.result + #matches .result-content::before { left:110px; width:calc(100% - 110p
 
 .result-content #icon.wCopyR > a img { width:24px !important; margin-bottom:4px; }
 
-.result-content.otherSrc #icon .provImg { display:none;}
+.result-content.otherSrc #icon .provImg:not(.oriRec) { display:none;}
 
 .result-content #icon .provImg { vertical-align: baseline; margin-right:0 !important; height:36px; width:auto !important;}
 
