--- a/src/components/App.css
+++ b/src/components/App.css
@@ -2374,7 +2374,7 @@ html[lang="en"] .resource .data > [data-prop="bdo:creator"] h4[data-prop="bdo:ro
 .resource .data.related .react-tabs__tab,
 .resource .data.related .react-tabs__tab.react-tabs__tab--selected,
 .resource .data.related .react-tabs__tab:focus { box-shadow:none; border:none; border-radius:0;padding:15px 25px; text-align:center;
-   max-width:calc(50% - 50px - 85px); font-size:16px; overflow-x: hidden;  text-overflow: ellipsis;  white-space: nowrap;
+   max-width:calc(50% - 50px - 85px); font-size:16px; overflow: hidden;  text-overflow: ellipsis;  white-space: nowrap;
 }
 
 .resource .data.related .react-tabs__tab:last-child { width:120px;}
