fix icon in collection members section (#382)

--- a/src/components/App.css
+++ b/src/components/App.css
@@ -1425,6 +1425,7 @@ vertical-align:middle;}
 .resource .data.related .header::before,
 .resource.work .data .header::before { background-image:url("/icons/work.png");  }
 .resource .data.related .rel-or-crea.all .header.instance::before,
+.resource .data.related .header.instance::before,
 .resource.instance .data .header::before { background-image:url("/icons/header/instance.svg"); background-size:64px auto; }
 .resource.volume .data .header::before,
 .resource.images .data .header::before { background-image:url("/icons/image.svg"); background-size:58px auto;  }
