--- a/src/components/App.css
+++ b/src/components/App.css
@@ -2626,7 +2626,7 @@ html[lang="en"] .resource .data > [data-prop="bdo:creator"] h4[data-prop="bdo:ro
 .etextPage h5 { margin-top:0; color:#777; display:inline-block; margin-bottom:10px;}
 .etextPage h4 + h5 { margin-top:15px;margin-bottom:30px;}
 .etextPage img.page, .etextPage h5 a, .etextPage .small a { cursor:pointer; } 
-.etextPage img.page { box-shadow:1px 1px 7px rgba(0,0,0.2); display:block; max-width:100%; margin-bottom:25px; margin-top:3px;
+.etextPage img.page { box-shadow:1px 1px 7px rgba(0,0,0,0.6); display:block; max-width:calc(100% - 14px); margin-bottom:25px; margin-top:3px;
    margin-left: auto; margin-right: auto; max-height:80vh;}
 .etextPage button { margin-left:-8px !important; }
 .etextPage button img { height:28px;transform:rotate(-90deg); opacity:0.75;}
